--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ npm-debug.log
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+/volumedemo/target/
