--- a/layerdemo/Dockerfile-bad-layering
+++ b/layerdemo/Dockerfile-bad-layering
@@ -1,5 +1,5 @@
 FROM alpine:latest
 ADD ./ /app/
 RUN apk add openjdk11
-WORKDIR /APP
-CMD ["java", "-jar", "layerdemo-0.0.1-SNAPSHOT.jar"]
+WORKDIR /app
+CMD ["java", "-jar", "target/layerdemo-0.0.1-SNAPSHOT.jar"]
