--- a/layerdemo/Dockerfile-singlestage-build
+++ b/layerdemo/Dockerfile-singlestage-build
@@ -2,4 +2,4 @@ FROM openjdk:11-jdk
 WORKDIR /app
 ADD . /app
 RUN ./mvnw package
-CMD ["java", "-jar", "layerdemo-0.0.1-SNAPSHOT.jar"]l
+CMD ["java", "-jar", "target/layerdemo-0.0.1-SNAPSHOT.jar"]l
