--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,10 @@ npm-debug.log
 *.zip
 *.tar.gz
 *.rar
+*.original
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
 /volumedemo/target/
+/portdemo/target/classes/
