--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -40,6 +40,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<image>webapp:spring-boot</image>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
