--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -40,7 +40,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<image>webapp:spring-boot</image>
+					<image>
+						<name>webapp:spring-boot</name>
+					</image>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -53,6 +55,11 @@
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
 				<version>3.2.0</version>
+				<configuration>
+					<to>
+						<image>webapp:jib</image>
+					</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
